# muxwell

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: check.yml  release.yml
src/muxwell/: __init__.py  engine.py  titles.py
src/muxwell/actions/: __init__.py  add_subs.py  auto_match_subs.py  base.py  infer_title.py  rem_track.py  set_title.py  set_track_default.py  set_track_lang.py
src/muxwell/cli/: app.py  apply.py  common.py  info.py  models.py  subtitles.py  utils.py
src/muxwell/filenames/: __init__.py  models.py  parser.py  patterns.py
src/muxwell/mkv/: __init__.py  models.py  wrapper.py
src/muxwell/operations/: __init__.py  add_subs.py  base.py  global_ops.py  rem_track.py  set_track_default.py  set_track_lang.py
src/muxwell/subtitles/: __init__.py  models.py  wrapper.py
src/muxwell/utils/: files.py  lang.py
tests/: __init__.py  conftest.py  test_engine.py
tests/actions/: __init__.py  conftest.py  test_auto_match_subs.py
tests/cli/: __init__.py  test_app.py  test_apply.py  test_info.py  test_models.py  test_subtitles.py  test_utils.py
tests/filenames/: test_parser.py
tests/fixtures/: __init__.py  files.py  mkv.py  subtitles.py  video.py
tests/mkv/: __init__.py  conftest.py  test_models.py  test_wrapper.py
tests/operations/: __init__.py  test_add_subs.py  test_base.py  test_global_ops.py  test_ordering.py  test_rem_track.py  test_set_track_default.py  test_set_track_lang.py
tests/subtitles/: __init__.py  test_models.py  test_wrapper.py
tests/utils/: __init__.py  test_files.py
