[project]
name = "muxwell"
version = "0.2.0"
description = "A cli tool for managing MKV files and subtitles with batch operations support."
readme = "README.md"
authors = [{ name = "Matthieu Daubie", email = "matthieu.daubie@outlook.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = ["pymkv2>=2.2.0.post1", "rich>=14.3.1", "typer>=0.21.1"]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "commitizen>=4.12.1",
    "pyright[nodejs]>=1.1.408",
    "ruff>=0.14.14",
]

[project.scripts]
mw = "muxwell.cli:app"

[tool.pyright]
venv = ".venv"
venvPath = "."
typeCheckingMode = "strict"

[tool.ruff]
line-length = 88 # match Black
lint.ignore = ["E501"] # line-length handled by Black
lint.extend-select = [
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
lint.isort.combine-as-imports = true
# Configure flake8-bugbear to recognize Typer immutable calls
lint.flake8-bugbear.extend-immutable-calls = ["typer.Argument", "typer.Option"]


[tool.commitizen]
version_provider = "uv"
version_files = ["src/muxwell/__init__.py", "pyproject.toml:version"]
tag_format = "v$version"
update_changelog_on_bump = true
breaking_change_exclamation_in_title = true
gpg_sign = true

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
