[project]
name = "muxwell"
version = "0.4.0"
description = "A cli tool for managing MKV files and subtitles with batch operations support."
readme = "README.md"
authors = [{ name = "Matthieu Daubie", email = "matthieu.daubie@outlook.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = ["mkv", "mkvtoolnix", "subtitles", "video", "batch", "cli"]
requires-python = ">=3.13"
dependencies = ["pymkv2>=2.2.0.post1", "rich>=14.3.1", "typer>=0.21.1"]

[project.urls]
Homepage = "https://github.com/mdaubie/muxwell"
Repository = "https://github.com/mdaubie/muxwell.git"
Issues = "https://github.com/mdaubie/muxwell/issues"
Changelog = "https://github.com/mdaubie/muxwell/blob/develop/CHANGELOG.md"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "commitizen>=4.12.1",
    "pyright[nodejs]>=1.1.408",
    "ruff>=0.14.14",
]

[project.scripts]
mw = "muxwell.cli:app"

[tool.pyright]
venv = ".venv"
venvPath = "."
typeCheckingMode = "strict"

[tool.ruff]
line-length = 88 # match Black
lint.ignore = ["E501"] # line-length handled by Black
lint.extend-select = [
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
lint.isort.combine-as-imports = true
# Configure flake8-bugbear to recognize Typer immutable calls
lint.flake8-bugbear.extend-immutable-calls = ["typer.Argument", "typer.Option"]


[tool.commitizen]
version_provider = "uv"
version_files = ["src/muxwell/__init__.py", "pyproject.toml:version"]
tag_format = "v$version"
update_changelog_on_bump = true
breaking_change_exclamation_in_title = true
gpg_sign = true

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
