[project]
name = "muxwell"
version = "0.9.0"
description = "A cli tool for managing MKV files and subtitles with batch operations support."
readme = "README.md"
authors = [{ name = "Matthieu Daubie", email = "matthieu.daubie@outlook.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = ["mkv", "mkvtoolnix", "subtitles", "video", "batch", "cli"]
requires-python = ">=3.10"
dependencies = [
    "chardet>=5.2.0",
    "pymkv2>=2.2.0.post1",
    "pysubs2>=1.8.0",
    "rich>=14.3.1",
    "typer>=0.21.1",
]

[project.urls]
Homepage = "https://github.com/mdaubie/muxwell"
Repository = "https://github.com/mdaubie/muxwell.git"
Issues = "https://github.com/mdaubie/muxwell/issues"
Changelog = "https://github.com/mdaubie/muxwell/blob/develop/CHANGELOG.md"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "commitizen>=4.12.1",
    "pyright[nodejs]>=1.1.408",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.14",
]

[project.scripts]
mw = "muxwell.cli:app"

[tool.pyright]
venv = ".venv"
venvPath = "."
typeCheckingMode = "strict"

[tool.ruff]
line-length = 88 # match Black
lint.ignore = ["E501"] # line-length handled by Black
lint.extend-select = [
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "FA",  # flake8-future-annotations
]
lint.isort.combine-as-imports = true
lint.isort.required-imports = ["from __future__ import annotations"]
# Configure flake8-bugbear to recognize Typer immutable calls
lint.flake8-bugbear.extend-immutable-calls = ["typer.Argument", "typer.Option"]


[tool.commitizen]
name = "cz_customize"
version_provider = "uv"
version_files = ["src/muxwell/__init__.py", "pyproject.toml:version"]
tag_format = "v$version"
update_changelog_on_bump = true
breaking_change_exclamation_in_title = true
gpg_sign = true

[tool.commitizen.customize]
commit_parser = "^(?P<change_type>feat|fix|refactor|perf|docs|style|test|build|ci|chore|revert)(?:\\((?P<scope>[^()\r\n]*)\\)|\\()?(?P<breaking>!)?:\\s(?P<message>.*)?"
changelog_pattern = "^(feat|fix|refactor|perf|test|BREAKING CHANGE)(\\(.+\\))?!?:"
change_type_order = [
    "BREAKING CHANGE",
    "Features",
    "Bug Fixes",
    "Refactoring",
    "Performance Improvements",
    "Tests",
]

[tool.commitizen.customize.change_type_map]
"feat" = "Features"
"fix" = "Bug Fixes"
"refactor" = "Refactoring"
"perf" = "Performance Improvements"
"test" = "Tests"

[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "--strict-config"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@overload",
]

[build-system]
requires = ["uv_build>=0.9.27,<0.12.0"]
build-backend = "uv_build"
